# teleinfo

./: .gitlab-ci.yml  Cargo.toml  Makefile  teleinfo.txt
.github/workflows/: ci.yml
src/: lib.rs  main.rs  teleinfo.rs
src/sql/: structure.sql
